# simpledataio

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  commit  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
include/: definitions.h  simpledataio.h  simpledataio_cuda.h
src/: generate_simpledataio_read.rb  generate_simpledataio_write.rb  simpledataio.c  simpledataio.f95  simpledataio_write.F90  simpledataio_write.f95  simpledataiof.F90  simpledataiof.F95
test/: test.c  test.cu  test.f95  test_long_dim_names.c  test_long_dim_namesf.f90  test_open.c  test_openf.f90  test_parallel.f95  test_parallel.sh  test_parallelf.f90  testdat_long_dim_names.cdf  testdata.cdf  testdatf.cdf  testf.f90
